# rules_py

./: .bazelrc  BUILD.bazel  MODULE.bazel  requirements.txt  tmp_test.bat
bazel/patches/: BUILD.bazel  rules_python_dependency_resolver_windows_empty_dir.patch
bazel/rust/: multi_platform_rust_binaries.bzl
py/private/: BUILD.bazel  py_binary.bzl  run.tmpl.bat
py/private/py_venv/: BUILD.bazel  entrypoint.tmpl.bat  entrypoint.tmpl.sh  py_venv.bzl
py/private/toolchain/: tools.bzl
py/private/toolchain/shim/: BUILD.bazel
py/private/toolchain/unpack/: BUILD.bazel
py/tests/virtual/django/: requirements.in  requirements.txt
py/tools/venv_shim/src/: main.rs
py/tools/windows_tools/: BUILD.bazel  defs.bzl  shim_main.py  unpack.py  venv.py
uv/private/constraints/platform/: BUILD.bazel  defs.bzl  macro.bzl
uv/private/host/: repository.bzl
uv/private/tomltool/: extension.bzl
uv/private/whl_install/: repository.bzl
