load("//py/private/toolchain:tools.bzl", "source_toolchain")

source_toolchain(
    name = "shim",
    bin = select({
        "@platforms//os:windows": "//py/tools/windows_tools:shim",
        "//conditions:default": "//py/tools/venv_shim",
    }),
    # FIXME: Use the target cfg?
    # See notes in the venv setup
    toolchain_type = "//py/private/toolchain:shim_toolchain_type",
)
